# observlib

./: .gitignore  CLAUDE.md  flake.nix
examples/: pyproject.toml
examples/examples/: __main__.py
lib/: pyproject.toml
lib/observlib/: __init__.py  client.py  decorator.py  legacy_prometheus_metrics.py  logs.py  span_utils.py  traces.py
lib/observlib/libraries/metrics/: __init__.py  prometheus_exporter.py
lib/observlib/metrics/: __init__.py  counter.py  legacy_prometheus_metrics.py
nix/: uv_setup.nix
nix/shells/dev/: default.nix
observlib/: hello.py  pyproject.toml  pytest.ini
observlib/observlib/: __init__.py  autoinstrumentation.py  decorator.py  globals.py  logs.py  metrics.py  span_utils.py  traces.py  utils.py
observlib/observlib/metrics/: __init__.py  gauge.py  histogram.py  prometheus_exporter.py
observlib/tests/: test_integration.py  test_observlib.py
