[project]
name = "observlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-exporter-otlp-proto-http>=1.31.0",
    "opentelemetry-sdk>=1.31.0",
    "prometheus-client>=0.21.1",
    "pyroscope-io>=0.8.8",
]
