[project]
name = "observlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.32.0",
    "opentelemetry-exporter-otlp>=1.32.0",
    "opentelemetry-exporter-prometheus>=0.53b0",
    "opentelemetry-instrumentation-asyncio>=0.53b0",
    "opentelemetry-instrumentation-urllib>=0.53b0",
    "opentelemetry-sdk>=1.32.0",
    "pyroscope-io>=0.8.8",
    "pyroscope-otel>=0.4.0",
]
