[project]
name = "observlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "opentelemetry-api>=1.32.0",
    "opentelemetry-exporter-otlp>=1.32.0",
    "opentelemetry-instrumentation-asyncio>=0.53b0",
    "opentelemetry-instrumentation-urllib>=0.53b0",
    "opentelemetry-sdk>=1.32.0",
    "prometheus-client>=0.22.0",
    "pyroscope-io>=0.8.8",
    "pyroscope-otel>=0.4.0",
    "werkzeug>=3.1.3",
]
