[project]
name = "observlib"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-exporter-prometheus>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "pyroscope-io>=0.8.11",
    "pyroscope-otel>=0.4.1",
]
