[project]
name = "observlib"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-exporter-prometheus>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "pyroscope-io>=0.8.11",
    "pyroscope-otel>=0.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pyroscope.*",
    "pyroscope_otel.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
